--- a/html/music.html
+++ b/html/music.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <embed src="../images/bg_music.mp3" hidden="true" autostart="true" loop="-1">
-
+    <embed src="../images/bg_music.mp3" hidden="true" autostart="true" loop="true">
 </body>
 
 </html>
